1. bump to jdk 22 2. refine docker image building