@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>java-playground</artifactId>
     <properties>
-        <java.version>21</java.version>
+        <java.version>22</java.version>
         <graalvm.version>24.0.1</graalvm.version>
         <skywalking.version>9.6.0</skywalking.version>
         <!-- <spring.native.version>0.12.2</spring.native.version>-->
@@ -308,14 +308,14 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>2023.0.1</version>
+                <version>2023.0.2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.ai</groupId>
                 <artifactId>spring-ai-bom</artifactId>
-                <version>0.8.1</version>
+                <version>1.0.0-M1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -328,10 +328,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                         <arg>--add-modules</arg>
                         <arg>jdk.incubator.vector</arg>
                     </compilerArgs>
+                    <!--release>21</release-->
+                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
@@ -348,11 +349,20 @@
                                     <!--tag>latest</tag-->
                                     <tag>%v-${git.commit.id.abbrev}</tag>
                                 </tags>
-                                <!--<from>bellsoft/liberica-openjre-alpine-musl:17.0.6</from>-->
-                                <from>apache/skywalking-java-agent:9.2.0-java21</from>
+                                <from>bellsoft/liberica-openjdk-debian:22</from>
+                                <!--from>apache/skywalking-java-agent:9.2.0-java21</from-->
                                 <workdir>/app</workdir>
                                 <!--<dockerFile>Dockerfile-maven</dockerFile>-->
                                 <!--<contextDir>${project.basedir}</contextDir>-->
+                                <env>
+                                    <spring_profiles_active>embedded</spring_profiles_active>
+                                    <db_root>/app</db_root>
+                                </env>
+                                <runCmds>
+                                    <run>apt -y update</run>
+                                    <run>apt -y upgrade</run>
+                                    <run>apt install -y sqlite3</run>
+                                </runCmds>
                                 <entryPoint>
                                     <exec>
                                         <arg>java</arg>
@@ -360,9 +370,9 @@
                                         <arg>--enable-preview</arg>
                                         <arg>-XX:+UnlockExperimentalVMOptions</arg>
                                         <arg>-XX:+UseZGC</arg>
-                                        <arg>-javaagent:/skywalking/agent/skywalking-agent.jar</arg>
+                                        <!--arg>-javaagent:/skywalking/agent/skywalking-agent.jar</arg-->
                                         <arg>-jar</arg>
-                                        <arg>${project.artifactId}-${project.version}.jar</arg>
+                                        <arg>/app/${project.artifactId}-${project.version}.jar</arg>
                                     </exec>
                                 </entryPoint>
                                 <assemblies>
